<resources>
    <string name="app_name">Bt Remote</string>
    <string name="select_device">Select device</string>
    <string name="select_device_hint">Select a device from the list below. If you cannot find it, ensure that it has already been paired with this device.</string>
    <string name="device_list_title">Paired devices:</string>
    <string name="bluetooth_switch_on">Switch bluetooth on</string>
    <string name="bluetooth_switch_off">Switch bluetooth off</string>
    <string name="reload_device_list">Reload</string>
    <string name="control_device">Control device</string>
    <string name="device_address" />
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_connect_connect">Connect</string>
    <string name="button_connect_disconnect">Disconnect</string>
</resources>